--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/194/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/194/index.mdx
@@ -11,11 +11,11 @@ Je ne sais pas pour vous, mais il fait chaud ici ! 🌞\
 Seulement en °C/°F, car cette semaine a été plutôt froide en termes d'actualité. 🥶\
 Beaucoup d'excellents articles, mais pas de version ou d'annonce majeure de React.
 
-TypeScript saved the week, with the first v5.6 beta, and first-class support coming in Node.js!
+TypeScript a été le héros de la semaine, avec la première version bêta v5.6, et un support de premier ordre pour Node.js !
 
-Check our partner conf [React Africa](https://react-africa.com/?utm_source=thisweekinreact.com) (🇲🇦 Casablanca - November 29th).\
-Get a 10% discount with code “TWIR”.\
-It's the very first international React conf in Africa! Great speakers have already been announced.
+Découvrez nos partenaires conf [React Africa](https://react-africa.com/?utm_source=thisweekinreact.com) (🇲🇦 Casablanca - 29 novembre).\
+Bénéficiez d'une réduction de 10% avec le code « TWIR ».\
+C'est la toute première conférence internationale React en Afrique ! D'excellents intervenants ont déjà été annoncés.
 
 <!-- truncate -->
 
@@ -47,31 +47,31 @@ Check the project's [GitHub repository](https://github.com/nlkitai/nlux) to get 
 
 🎥 **[React Conf 2024 Talks](https://conf.react.dev/talks)**
 
-The React Conf 2024 talks are finally online, and you can also take a look at the [photos](https://conf.react.dev/photos) and [highlights video](https://www.youtube.com/watch?v=p6auCiVoa3c).
+Les conférences de la React Conf 2024 sont enfin en ligne, et vous pouvez également jeter un coup d'œil aux [photos](https://conf.react.dev/photos) et à la [vidéo des moments forts](https://www.youtube.com/watch?v=p6auCiVoa3c).
 
-We haven’t had any huge React announcement this week, so I thought it would be cool to remind you all the great upcoming React 19 features thanks to this [great bento slide from Lydia Hallie’s talk](https://www.youtube.com/watch?v=AJOGzVygGcY). Note that [React 19 is in Release Candidate](https://react.dev/blog/2024/04/25/react-19) and should be out soon.
+Nous n'avons pas eu d'annonce majeure concernant React cette semaine, alors j'ai pensé qu'il serait cool de vous rappeler toutes les fonctionnalités de React 19 à venir grâce à cette [superbe diapositive bento de la conférence de Lydia Hallie](https://www.youtube.com/watch?v=AJOGzVygGcY). Notez que [React 19 est en Release Candidate](https://react.dev/blog/2024/04/25/react-19) et devrait sortir bientôt.
 
 ---
 
 - 💸 [Reactile – a new approach to React-based web apps. Create your own views. Let it handle your windows and widgets in a single browser tab](https://www.reactile.net/?utm_source=reactnewsletter)
-- 👀 [Rsnext](https://github.com/ScriptedAlchemy/rsnext/commits/rspack): The Rspack team is working on getting Next.js to work under their Rust bundler and shared great progress. The first alphas have been published and can be tried by [aliasing “next” to “rsnext”](https://github.com/substancelabs/rsnext/blob/main/package.json#L11). Also, [Rspack 1.0 beta 1 is out with a new “layers” feature](https://x.com/rspack_dev/status/1818490358319530221), useful for bundling your app in multiple variants and supporting React Server Components. We'll share more about this in the future, once it's ready for prime time.
-- 👀 [Enhancing SEO in Flutter Web Projects with Next.js Integration](https://gist.github.com/lcw99/ac1738cb6d5bb032085077605f56665e): Flutter users are desperate to solve the web SEO problem, after Google shared its intention to [deprecate and remove the HTML renderer](https://github.com/flutter/flutter/issues/145954). This awkward workaround is based on Next.js.
+- 👀 [Rsnext](https://github.com/ScriptedAlchemy/rsnext/commits/rspack) : L'équipe de Rspack est en train de travailler pour que Next.js fonctionne sous leur bundler Rust et a partagé de gros progrès. Les premières alphas ont été publiées et peuvent être essayées en [aliasant "next" en "rsnext"](https://github.com/substancelabs/rsnext/blob/main/package.json#L11). De plus, [Rspack 1.0 beta 1 est sorti avec une nouvelle fonctionnalité "layers"](https://x.com/rspack_dev/status/1818490358319530221), utile pour bundler votre application en plusieurs variantes et supporter les React Server Components. Nous vous en dirons plus à l'avenir, une fois qu'elle sera prête pour le grand public.
+- 👀 [Enhancing SEO in Flutter Web Projects with Next.js Integration](https://gist.github.com/lcw99/ac1738cb6d5bb032085077605f56665e) : Les utilisateurs de Flutter cherchent désespérément à résoudre le problème du référencement web, après que Google ait fait part de son intention de [déprécier et supprimer le moteur de rendu HTML](https://github.com/flutter/flutter/issues/145954). Cette solution de contournement maladroite est basée sur Next.js.
 - 🐦 [Million Lint - Get parents/children on hover, Locate render triggers](https://x.com/aidenybai/status/1816136004388176010)
-- 📊 [Stack Overflow Dev Survey - The 2024 results](https://survey.stackoverflow.co/2024/): React, Node.js, and JavaScript remain the most popular technologies.
-- 🗓️ [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸 Utah - 12-13, August - Last call ! You still have a chance to get your ticket, and don’t forget the [10% discount](https://ti.to/react-rally/react-rally-2024/discount/TWIR) with code "TWIR".
-- 🗓️ [Squiggle Conf](https://2024.squiggleconf.com/?utm_source=thisweekinreact) - 🇺🇸 Boston - 03 & 04 October - Get a 10% discount with code "TWIR". 1 day of conferences, 1 day of workshops, in the heart of Boston historic district, on web dev tooling !
-- 📜 [React Owner Components](https://reacttraining.com/blog/react-owner-components): Greatly explains the difference between Owner and Parent components. The owner creates the JSX and passes props to it. Client Components cannot own Server Components.
-- 📜 [Dissecting Partial Pre Rendering](https://www.nikhilsnayak.dev/blogs/dissecting-partial-pre-rendering): Illustrates how Next.js experimental PPR features takes the best of other rendering strategies with a concrete example: a static course page with dynamic reviews.
-- 📜 [Vercel - Flags as Code in Next.js](https://vercel.com/blog/flags-as-code-in-next-js): Explains how the new package `@vercel/flags/next` encodes best practices for integrating feature flags in Next.js, decoupling your code from the underlying flag provider source. Flags are always evaluated server-side, this prevents layout shifts, spinners and disclosing sensitive things to the client. I find it pretty cool that it works with static pages and PPR too: you can precompute as many static variants as there are flag permutations!
-- 📜 [Netlify - Live Preview for Gatsby is back (and better) with the new Dev Server](https://www.netlify.com/blog/gatsby-live-preview-with-new-dev-server/): Netlify has a new generic platform primitive to start your framework Dev Server in the cloud. Useful for Gatsby live previews when using compatible content (CMS) source plugins.
-- 📜 [Flexible network data preloading in large SPAs](https://mmazzarolo.com/blog/2024-07-29-data-preloading-script/): When not using a framework, you might want to inline in the HTML some data preloading logic, to speed up your app startup time by parallelizing data/bundle fetching.
-- 📜 [Creating your own store](https://www.smallrecipesfordisaster.com/posts/local-store): Shows what it takes to create your own store that you connect to React with `useSyncExternalStore`.
-- 📜 [Exploring a useState-like API with Zustand: A Fun Experiment](https://www.smallrecipesfordisaster.com/posts/dispatch-zustand): Shows how you can build on top of Zustand so that selectors return a `[state, setState]` tuple.
-- 📜 [After a Decade of React, Is Frontend a Post-React World Now?](https://thenewstack.io/after-a-decade-of-react-is-frontend-a-post-react-world-now/): There are good alternatives, but React is still growing, and I believe its growth is still accelerating (🐦 [tweet](https://x.com/sebastienlorber/status/1818233736091271285)).
-- 📜 [Battle of the Asyncs](https://www.brenelz.com/posts/battle-of-the-asyncs/): Compares React’s `use` hook with Solid’s `createAsync`, and observes the React solution looks slightly less convenient (even with RSCs).
-- 📜 [Why is Zustand a community favorite?](https://www.frontendundefined.com/posts/monthly/zustand-review/): Positive feedback for Zustand, a well-designed, lightweight state manager with selector support.
-- 📜 [Boosting performance: Faire’s transition to NextJS](https://craft.faire.com/boosting-performance-faires-transition-to-nextjs-3967f092caaf): Incremental migration from a Kotlin + React SPA to Next.js stack.
-- 📜 [Complete Guide to State Management in React](https://www.propelauth.com/post/state-management-in-react): A comprehensive guide, also covering localStorage and query parameters.
+- 📊 [Stack Overflow Dev Survey - The 2024 results](https://survey.stackoverflow.co/2024/) : React, Node.js et JavaScript restent les technologies les plus populaires.
+- 🗓️ [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸 Utah - 12-13 août - Dernier appel ! Vous avez encore une chance d'obtenir votre billet, et n'oubliez pas la [réduction de 10%](https://ti.to/react-rally/react-rally-2024/discount/TWIR) avec le code « TWIR ».
+- 🗓️ [Squiggle Conf](https://2024.squiggleconf.com/?utm_source=thisweekinreact) - 🇺🇸 Boston - 03 & 04 octobre - 10% de réduction avec le code « TWIR ». 1 jour de conférence, 1 jour d'atelier, au coeur du quartier historique de Boston, sur les outils de développement web !
+- 📜 [React Owner Components](https://reacttraining.com/blog/react-owner-components) : Explique parfaitement la différence entre les composants Owner et Parent. Le Owner crée le JSX et lui transmet des props. Les composants clients ne peuvent pas posséder de composants serveurs.
+- 📜 [Dissecting Partial Pre Rendering](https://www.nikhilsnayak.dev/blogs/dissecting-partial-pre-rendering) : Illustre comment les fonctionnalités expérimentales PPR de Next.js prennent le meilleur des autres stratégies de rendu avec un exemple concret : une page de cours statique avec des évaluations dynamiques.
+- 📜 [Vercel - Flags as Code in Next.js](https://vercel.com/blog/flags-as-code-in-next-js) : Explique comment le nouveau package `@vercel/flags/next` encode les meilleures pratiques pour intégrer les flags de fonctionnalités dans Next.js, en découplant votre code de la source sous-jacente du provider du flag. Les flags sont toujours évalués côté serveur, ce qui évite les changements de layout, les spinners et la divulgation de choses sensibles au client. Je trouve assez cool que cela fonctionne aussi avec les pages statiques et PPR : vous pouvez précalculer autant de variantes statiques qu'il y a de permutations de flag !
+- 📜 [Netlify - Live Preview for Gatsby is back (and better) with the new Dev Server](https://www.netlify.com/blog/gatsby-live-preview-with-new-dev-server/) : Netlify propose une nouvelle plateforme générique primitive pour démarrer votre framework Dev Server dans le cloud. Utile pour les prévisualisations en direct de Gatsby lors de l'utilisation de plugins source de contenu compatible (CMS).
+- 📜 [Flexible network data preloading in large SPAs](https://mmazzarolo.com/blog/2024-07-29-data-preloading-script/) : Si vous n'utilisez pas de framework, vous pouvez intégrer dans le code HTML une logique de préchargement des données, afin d'accélérer le temps de démarrage de votre application en parallélisant la récupération des données et des bundles.
+- 📜 [Creating your own store](https://www.smallrecipesfordisaster.com/posts/local-store) : Montre ce qu'il faut faire pour créer son propre store que l'on connecte à React avec `useSyncExternalStore`.
+- 📜 [Exploring a useState-like API with Zustand: A Fun Experiment](https://www.smallrecipesfordisaster.com/posts/dispatch-zustand) : Montre comment on peut construire au-dessus de Zustand pour que les sélecteurs renvoient un tuple `[state, setState]`.
+- 📜 [After a Decade of React, Is Frontend a Post-React World Now?](https://thenewstack.io/after-a-decade-of-react-is-frontend-a-post-react-world-now/) : Il existe de bonnes alternatives, mais React est toujours en pleine croissance, et je pense que sa croissance s'accélère encore (🐦 [tweet](https://x.com/sebastienlorber/status/1818233736091271285)).
+- 📜 [Battle of the Asyncs](https://www.brenelz.com/posts/battle-of-the-asyncs/) : Compare le hook `use` de React avec le `createAsync` de Solid, et observe que la solution de React semble légèrement moins pratique (même avec les RSC).
+- 📜 [Why is Zustand a community favorite?](https://www.frontendundefined.com/posts/monthly/zustand-review/) : Feedback positif pour Zustand, un gestionnaire d'état léger et bien conçu avec support de sélecteur.
+- 📜 [Boosting performance: Faire’s transition to NextJS](https://craft.faire.com/boosting-performance-faires-transition-to-nextjs-3967f092caaf) : Migration incrémentale d'une SPA Kotlin + React vers une solution Next.js.
+- 📜 [Complete Guide to State Management in React](https://www.propelauth.com/post/state-management-in-react) : Un guide complet, qui couvre également localStorage et les query parameters.
 - 📦 [Preact 10.23 - Support ref cleanup functions](https://github.com/preactjs/preact/releases/tag/10.23.0)
 - 📦 [Fumadocs 13.0 - Better Code Blocks, Callouts,](https://fumadocs.vercel.app/blog/v13)
 - 📦 [Bun 1.1.21 - Fix Remix Request/Response override issue](https://bun.sh/blog/bun-v1.1.21)
@@ -96,25 +96,25 @@ Learn to build a multi-tenant task manager that solves team isolation, user role
 
 ## 📱 React-Native {#react-native}
 
-This section is authored by [Benedikt](https://twitter.com/bndkt).
+Cette section est rédigée par [Benedikt](https://twitter.com/bndkt).
 
 [![New Architecture Survey](/emails/issues/194/rn.jpg)](https://docs.google.com/forms/d/e/1FAIpQLSdrwmX0MvyjEuu6Kx9fH6FufcfftFgf_rqrGASf3hEGD7mupg/viewform)
 
 📊 **[New Architecture Survey](https://docs.google.com/forms/d/e/1FAIpQLSdrwmX0MvyjEuu6Kx9fH6FufcfftFgf_rqrGASf3hEGD7mupg/viewform)**
 
-We had a lot of news about the New Architecture over the past months, including how it became the new default this year. Now, the teams at React Native and Expo have launched a survey to learn more about your adoption (or what’s keeping you from adopting it). It has 17 questions and should only take a couple of minutes, so I suggest we all help our friends at Meta and Expo out and share our New Arch experience with them. I’m sure they’ll pay us back by using the feedback for even more improvements!
+Nous avons eu beaucoup d'informations sur la New Architecture au cours des derniers mois, notamment sur le fait qu'elle est devenue la nouvelle valeur par défaut cette année. Aujourd'hui, les équipes de React Native et d'Expo ont lancé un sondage pour en savoir plus sur votre adoption (ou sur ce qui vous empêche de l'adopter). L'enquête comporte 17 questions et ne devrait prendre que quelques minutes. Je vous propose donc d'aider nos amis de Meta et d'Expo et de partager avec eux notre expérience de New Arch. Je suis sûr qu'ils nous rendront la pareille en utilisant les commentaires pour encore plus d'améliorations !
 
 ---
 
 - 💸 [Build cross-platform apps with React Native. Combine native performance & JavaScript ease. Learn PDF viewer creation with Apryse SDK](https://apryse.com/blog/mobile/react-and-react-native-pdf-viewers?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=jul3124)
-- 👀 [React Native PR - React Native 0.75 will add Swift Package Manager support](https://github.com/facebook/react-native/pull/44627): Now part of RC 6
+- 👀 [React Native PR - React Native 0.75 will add Swift Package Manager support](https://github.com/facebook/react-native/pull/44627) : Fait désormais partie de la RC 6
 - 👀 [Expo PR - react-native-macos support for config plugins](https://github.com/expo/expo/pull/30660)
 - 🐦 [Expo SDK 52 will have native fetch streaming with JSI](https://x.com/Baconbrix/status/1816145261170692397)
 - 🐦 [UploadThing now supports file uploads on mobile via Expo](https://x.com/t3dotgg/status/1818330724451098676)
 - 🐦 [GPU Access from React Native - First technical preview of WebGPU in React Native](https://x.com/wcandillon/status/1816758789766336624)
 - 🐦 [Expo Router FAQ - must we use index files?](https://x.com/kadikraman/status/1816583383423881650)
-- 📜 [What is Continuous Native Generation and why does it matter?](https://expo.dev/blog/what-is-continuous-native-generation) CNG is the process of generating native projects (i.e. Android and iOS project files) on demand. This article goes into the advantages of this approach and how it works.
-- 📜 [Adding React Native to an Existing Flutter App](https://www.callstack.com/blog/adding-react-native-to-an-existing-flutter-app): We all know RN works well in a brownfield approach (adding RN to native apps), but this article explores how RN can work in Flutter apps as well.
+- 📜 [What is Continuous Native Generation and why does it matter?](https://expo.dev/blog/what-is-continuous-native-generation) : Le CNG est le processus de génération de projets natifs (c'est-à-dire de fichiers de projets Android et iOS) à la demande. Cet article présente les avantages de cette approche et son fonctionnement.
+- 📜 [Adding React Native to an Existing Flutter App](https://www.callstack.com/blog/adding-react-native-to-an-existing-flutter-app) : Nous savons tous que l'IA fonctionne bien dans une approche classique (pour ajouter RN aux applications natives), mais cet article explore la façon dont l'IA peut également fonctionner dans les applications Flutter.
 - 📦 [RN 0.74.4](https://github.com/facebook/react-native/releases/tag/v0.74.4)
 - 📦 [RN 0.75.0 RC 6](https://github.com/facebook/react-native/releases/tag/v0.75.0-rc.6)
 - 📦 [React-Native-VisionOS 0.75.0-rc.1](https://github.com/callstack/react-native-visionos/releases/tag/v0.75.0-rc.1-visionos)
@@ -136,8 +136,8 @@ We had a lot of news about the New Architecture over the past months, including 
 
 ## 🔀 Autre {#other}
 
-- 👀 [Node.js - Roadmap for experimental TypeScript support](https://github.com/nodejs/loaders/issues/217): Huge, Node.js just [merged the first PR](https://github.com/nodejs/node/pull/53725) of this plan, adding a new `--experimental-strip-types` option to let TypeScript run natively on Node.js.
-- 👀 [Agenda for the 103rd meeting of Ecma TC39](https://github.com/tc39/agendas/blob/main/2024/07.md): Happening right now! Great proposals have already progressed, such as `RegExp.escape`.
+- 👀 [Node.js - Roadmap for experimental TypeScript support](https://github.com/nodejs/loaders/issues/217) : Enorme, Node.js vient de [fusionner le premier PR](https://github.com/nodejs/node/pull/53725) de ce plan, en ajoutant une nouvelle option `--experimental-strip-types` pour permettre à TypeScript de fonctionner nativement sur Node.js.
+- 👀 [Agenda for the 103rd meeting of Ecma TC39](https://github.com/tc39/agendas/blob/main/2024/07.md) : Cela se passe en ce moment même ! De très bonnes propositions ont déjà avancé, comme `RegExp.escape`.
 - 📜 [Patterns for Memory Efficient DOM Manipulation with Modern Vanilla JavaScript](https://frontendmasters.com/blog/patterns-for-memory-efficient-dom-manipulation/)
 - 📜 [Garbage collection and closures](https://jakearchibald.com/2024/garbage-collection-and-closures/)
 - 📜 [Please Stop Using Barrel Files](https://tkdodo.eu/blog/please-stop-using-barrel-files)
