--- a/website/newsletter/195/index.mdx
+++ b/website/newsletter/195/index.mdx
@@ -12,10 +12,9 @@ Hi everyone!
 
 **Newsletter intro : reactjsday & ReactUniverse**
 
-*   🗓️ [The Geek Conf](https://www.thegeekconf.com/?utm_source=thisweekinreact) - 🇩🇪 Berlin - 18 & 25 July - Conference summary post : to write with you after the conf
-    
+- 🗓️ [The Geek Conf](https://www.thegeekconf.com/?utm_source=thisweekinreact) - 🇩🇪 Berlin - 18 & 25 July - Conference summary post : to write with you after the conf
 
-*   🗓️ [React-Africa](https://react-africa.com/?utm_source=thisweekinreact) - 🇲🇦 Casablanca - 29 November - Line up is online, check, and apply a 10% discount on tickets with code TWIR !
+- 🗓️ [React-Africa](https://react-africa.com/?utm_source=thisweekinreact) - 🇲🇦 Casablanca - 29 November - Line up is online, check, and apply a 10% discount on tickets with code TWIR !
 
 <!-- truncate -->
 
@@ -31,9 +30,9 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![WorkOS: Modern Identity Platform for B2B SaaS](/emails/issues/195/workOS.jpg)](https://workos.com/?utm_source=thiswekkinreact&utm_medium=newsletter&utm_campaign=q32024)
+[![WorkOS: Modern Identity Platform for B2B SaaS](/emails/issues/195/workOS.jpg)](https://workos.com/?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=q32024)
 
-**[WorkOS: Modern Identity Platform for B2B SaaS](https://workos.com/?utm_source=thiswekkinreact&utm_medium=newsletter&utm_campaign=q32024)**
+**[WorkOS: Modern Identity Platform for B2B SaaS](https://workos.com/?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=q32024)**
 
 With WorkOS you can start selling to enterprises with just a few lines of code.
 
@@ -47,7 +46,7 @@ With WorkOS you can start selling to enterprises with just a few lines of code.
 
 🤝 WorkOS is trusted by hundreds of leading startups like **Perplexity**, **Vercel**, & **Webflow**.
 
-[Get started with WorkOS](https://workos.com/?utm_source=thiswekkinreact&utm_medium=newsletter&utm_campaign=q32024) 🚀
+[Get started with WorkOS](https://workos.com/?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=q32024) 🚀
 
 ---
 
@@ -69,12 +68,9 @@ With WorkOS you can start selling to enterprises with just a few lines of code.
 
 [React Universe Conf](https://www.reactuniverseconf.com/?utm_campaign=RUC%202024%20-%20TWIR%20Nesletter&utm_source=RUC%202024%20-%20TWIR%20Nesletter&utm_medium=TWIR%20NesletterOrganic&utm_content=TWIR%20Nesletter) is two incredible days of learning, networking, and innovation in the heart of Europe. Formerly known as React Native EU, [React Universe Conf](https://www.reactuniverseconf.com/?utm_campaign=RUC%202024%20-%20TWIR%20Nesletter&utm_source=RUC%202024%20-%20TWIR%20Nesletter&utm_medium=TWIR%20NesletterOrganic&utm_content=TWIR%20Nesletter) is now the ultimate gathering for React and React Native enthusiasts. What's in it for you this year?
 
-*   **Exceptional lineup:** Dan Abramov, Evan Bacon, Kent C. Dodds, Delba de Oliveira, Marc Rousavy, and many other great speakers.
-    
-*   **Hot topics:** New architecture, React Server Components, Static Hermes, and Out-of-Tree platforms.
-    
-*   **Practical insights** on cross-platform app development with React Native.
-    
+- **Exceptional lineup:** Dan Abramov, Evan Bacon, Kent C. Dodds, Delba de Oliveira, Marc Rousavy, and many other great speakers.
+- **Hot topics:** New architecture, React Server Components, Static Hermes, and Out-of-Tree platforms.
+- **Practical insights** on cross-platform app development with React Native.
 
 Use promo code **TWIR** for **10% discount** on your ticket. Book your spot [HERE](https://www.reactuniverseconf.com/?utm_campaign=RUC%202024%20-%20TWIR%20Nesletter&utm_source=RUC%202024%20-%20TWIR%20Nesletter&utm_medium=TWIR%20NesletterOrganic&utm_content=TWIR%20Nesletter) and see you in Wrocław!
 
