--- a/website/newsletter/195/index.mdx
+++ b/website/newsletter/195/index.mdx
@@ -52,9 +52,34 @@ With WorkOS you can start selling to enterprises with just a few lines of code.
 
 ## ⚛️ React {#react}
 
-<Todo />
-
-- 💸[Reactile – a new approach to React-based web apps. Create your own views. Let it handle your windows and widgets in a single browser tab](https://www.reactile.net/?utm_source=reactnewsletter)
+- 💸 [Reactile – a new approach to React-based web apps. Create your own views. Let it handle your windows and widgets in a single browser tab](https://www.reactile.net/?utm_source=reactnewsletter)
+- 🐦 [Zuckerberg calling out React as one of Meta’s major open source initiatives](https://x.com/Vjeux/status/1818766264833392763)
+- 🐦 [Visual editing with ReactBricks using RSC](https://x.com/rauchg/status/1819383553668370440)
+- 📖 [Revised ”Redux Essentials" tutorial](https://redux.js.org/tutorials/essentials/part-1-overview-concepts)
+- 🗓️ [React-Africa](https://react-africa.com/?utm_source=thisweekinreact) - 🇲🇦 Casablanca - 29 November - Line up is online, check, and apply a 10% discount on tickets with code TWIR !
+- 📜 [React Compiler, How Does It Work?](https://yongseok.me/blog/en/react_compiler_1/): A 4-part series going really deep on the React Compiler code, explaining the Babel Plugin, useMemoCache, HIR/SSA transformations. That’s a lot of implementation details to read, and very technical, but there are also great overviews that describe the main algorithms at the end of each post. It operates on individual functions, with an AST “lowered” to a Hight-level Intermediate Representation (HIR) that also permits to decouple the compiler from Babel. A quite advanced piece of technology!
+- 📜 [Avoiding premature abstraction with Unstyled React Components](https://buildui.com/posts/avoiding-premature-abstraction-with-unstyled-react-components): Sam refactors a concrete Form button to a headless LoadingButton abstraction that remains flexible and doesn’t prematurely abstract styling. I agree, and once time comes you can still create another styled abstraction on top.
+- 📜 [Common Sense Refactoring of a Messy React Component](https://alexkondov.com/refactoring-a-messy-react-component/): Alex explains his process to refactor a bloated real-world Form component. I do the same: extracting sub-components, custom hooks, and helper code from the main component usually improves clarity.
+- 📜 [Introducing XState Store](https://tkdodo.eu/blog/introducing-x-state-store): Dominik (React Query) likes Zustand, but explains why he now finds XState Store a more compelling option. It’s quite similar but more opinionated (separate state/actions, event-driven…). Daishi answered you can get a similar interface with his new [Zustand-xs middleware](https://github.com/zustandjs/zustand-xs). I explained ([tweet](https://x.com/sebastienlorber/status/1821166302469194062)) why I’m not always a fan of an event-driven interface.
+- 📜 [Using Notion as my CMS with Next.js](https://jordaneldredge.com/notes/notion-cms/): Describes a setup to reduce the friction of creating and publishing notes. Notion content is first converted as Markdown, and then renderer in a Next.js app.
+- 📜 [Next.js’s unstable_cache() demystified](https://jordaneldredge.com/notes/unstable_cache/): Some notes on the dangers of returning classes, and a link to an interesting related article/package listing even more caching gotchas.
+- 📜 [Build your own React state management library in under 40 lines of code](https://paripsky.github.io/blog/build-your-own-react-state-management/): Creates a custom external store and reads it in React with… useSyncExternalStore + 2 improvement suggestions such as adding an Immer integration.
+- 📜 [GitHub Vitale - Live notebooks in VS Code for JavaScript/TypeScript, web development, and AI experimentation](https://githubnext.com/projects/vitale/): The GitHub Next team introduced a new Notebook technology (like Jupyter) for interactive exploratory coding based on Vite. It supports rendering a React component in a notebook cell.
+- 📜 [Frontend Security Checklist](https://www.trevorlasn.com/blog/frontend-security-checklist): Includes examples of mitigating XSS and CSRF attacks in a React context.
+- 📜 [The Art of Dithering and Retro Shading for the Web (with React Three Fiber)](https://blog.maximeheckel.com/posts/the-art-of-dithering-and-retro-shading-web/)
+- 🔨 [Dédale - Email template development environment, based on React Email](https://bireme.io/en/blog/announcing-dedale)
+- 📦 [Redwood 8.0 RC](https://github.com/redwoodjs/redwood/releases/tag/v8.0.0-rc.1114): New version of the full-stack React framework is now in release candidate. It adds SSR and RSC support (experimental), Vite 5, Prettier 3. See the [v8 upgrade guide](https://community.redwoodjs.com/t/redwood-v8-0-0-upgrade-guide/7250). They also plan to introduce soon a Background Jobs feature.
+- 📦 [Vercel AI SDK 3.3 - useChat() supports file attachments, useObject() streams structured data](https://vercel.com/blog/vercel-ai-sdk-3-3): With structured data based on Zod schemas, LLMs are getting easier to use for devs. Note that [OpenAI also announced support for structured output with Zod support](https://openai.com/index/introducing-structured-outputs-in-the-api/)!
+- 📦 [Astro 4.13 - stable request rewriting, stable content collections JSON schemas](https://astro.build/blog/astro-4130/)
+- 📦 [react-three/xr 6.1 - WebXR Anchor API, Hit Testing API, DOM Overlay API, experimental Emulator](https://github.com/pmndrs/xr/releases/tag/v6.1.0)
+- 📦 [Tldraw sync - self-hostable real-time collaboration engine for React whiteboard drawing app](https://tldraw.substack.com/p/announcing-tldraw-sync)
+- 📦 [React-Hooked - Like shadcn/ui but for hooks](https://github.com/maximilienGilet/react-hooked)
+- 🎥 [Theo - Server Islands are really cool](https://www.youtube.com/watch?v=uBxehYwQox4)
+- 🎥 [Jack Herrington - NextJS Feature Flagging Made Easy](https://www.youtube.com/watch?v=M1Rj1xSm3SM)
+- 🎥 [UI Engineering - Why React is Declarative?](https://www.youtube.com/watch?v=TVmRuP0_RGM)
+- 🎥 [Expo - What React devs need to know about React Native](https://www.youtube.com/live/iB7sc-fzpWw)
+- 🎙️ [Syntax - Why the jQuery Creator Uses React and Typescript - John Resig](https://syntax.fm/show/800/why-the-jquery-creator-uses-react-and-typescript-john-resig?utm_source=thisweekinreact)
+- 🎙️ [This Month in React - July 2024 - State of JS, React, HTML](https://podcasters.spotify.com/pod/show/reactiflux/episodes/TMiR-2024-07-State-of-JS--React--HTML-e2mplrc)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -80,13 +105,39 @@ Use promo code **TWIR** for **10% discount** on your ticket. Book your spot [HER
 
 This section is authored by [Benedikt](https://twitter.com/bndkt).
 
-<Todo />
+- 💸 [React Native Mastery - The only course you need to Master React Native & Expo](https://notjust.dev/react-native-mastery?utm_source=twir&utm_medium=email)
+- 🐦 [Why the Hermes team favors JSI NativeState over HostObject](https://x.com/tmikov/status/1820266381545468200)
+- 🐦 [Experimental tree shaking support landed for Expo](https://x.com/baconbrix/status/1816488585409052925): Experimentally available in SDK 52 (which is in canary)
+- 🐦 [Styles coming to React Native - Linear gradients, box shadows, CSS filters, % flex gaps](https://x.com/Baconbrix/status/1821039004671741984)
+- 👀 [React Native PR - Linear gradient in React Native under experimental backgroundImage style prop](https://github.com/facebook/react-native/pull/45434)
+- 📜 [From JS to Fire OS - React Native for Amazon Devices](https://dev.to/amazonappdev/get-started-with-react-native-for-amazon-fire-os-51j8): Reminder that RN can be used to build apps for Fire Tablets and Fire TVs, as Fire OS is based on Android.
+- 📜 [TV Navigation in React Native: A Guide to using TVFocusGuideView](https://dev.to/amazonappdev/tv-navigation-in-react-native-a-guide-to-using-tvfocusguideview-302i): I’m really excited about RN beyond just phones and tablets, so I appreciate articles on how to best leverage platform specific behaviors like this article does for tvOS and Android TV.
+- 📜 [Xcode UI debugging with Quick Look](https://www.oskarkwasniewski.dev/blog/xcode-quick-look-debugging): Comes in handy if you happen to work in Xcode a lot (I don’t 😅).
+- 📜 [My visit to Chain React 2024 (and some tips for going to conferences)](https://dev.to/amazonappdev/my-visit-to-chain-react-2024-nfj): Warning - if you didn’t go to Chain React yourself, this article will give you major FOMO, but I still enjoyed reading this.
+- 📦 [React Native 0.75.0-rc.7 - update CLI to 14.0](https://github.com/facebook/react-native/releases/tag/v0.75.0-rc.7)
+- 📦 [React Native 0.74.5 - minor fixes](https://github.com/facebook/react-native/releases/tag/v0.74.5)
+- 📦 [react-native-gesture-handler 2.18.0 - Now has ReanimatedSwipeable as a standalone component, adds a couple improvements and support for RN 0.75](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.18.0)
+- 📦 [react-native-svg 15.5.0 - Minor release introducing new filters, CSS filters API on FilterImage component and many bug fixes](https://github.com/software-mansion/react-native-svg/releases/tag/v15.5.0)
+- 📦 [react-native-reanimated 3.15.0 - ReducedMotionConfig, EntryExitTransition, CurvedTransition, RN 0.75 support and a lot of fixes](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.15.0)
+- 🎥 [Simon Grimm - React Native Server Defined Rendering](https://www.youtube.com/watch?v=-6Mrar0r3kg)
+- 🎥 [Reactiiive - The secret behind Jotai and MMKV (React Native)](https://www.youtube.com/watch?v=-AR2PN38ovo)
+- 🎥 [notJust.dev - Building the iOS 18 Photos App with React Native and Reanimated](https://www.youtube.com/watch?v=pZHRFNpYkAY)
+- 🎙️ [PodRocket - Using RSCs in Expo Router with Evan Bacon](https://podrocket.logrocket.com/using-rscs-expo-router-evan-bacon)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 🐦 [TC39 meeting 103 - `RegExp.escape` stage 3, Concurrency Control + Unordered Async Iterator Helpers stage 1](https://x.com/robpalmer2/status/1819051033215049742)
+- 📜 [How Google handles JavaScript throughout the indexing process](https://vercel.com/blog/how-google-handles-javascript-throughout-the-indexing-process)
+- 📜 [Why Unknown Types Are Useful](https://michaeluloth.com/programming-types-unknown-why-useful/)
+- 📜 [A different way to think about TypeScript](https://www.rob.directory/blog/a-different-way-to-think-about-typescript)
+- 📜 [What if you used Container Units for… everything?](https://frontendmasters.com/blog/what-if-you-used-container-units-for-everything/)
+- 📜 [Reliable JavaScript benchmarking with Tachometer](https://nolanlawson.com/2024/08/05/reliable-javascript-benchmarking-with-tachometer/)
+- 📜 [Effect Best Practices](https://ethanniser.dev/blog/effect-best-practices/)
+- 📦 [Node v22.6.0 - with Experimental TypeScript support](https://nodejs.org/en/blog/release/v22.6.0)
+- 📦 [Rslib - The library build tool powered by Rsbuild](https://github.com/web-infra-dev/rslib)
+- 📦 [Nx 19.5 - Stackblitz, Bun, Pnpm 9, Incremental Builds for Vite, Gradle Test Atomizer](https://nx.dev/blog/nx-19-5-adds-stackblitz-new-features-and-more)
 
 ---
 
