--- a/website/newsletter/195/index.mdx
+++ b/website/newsletter/195/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /195
-title: "This Week In React #195: Compiler, Refactoring components, XState Store, Next.js, Redwood, Vitale, Astro, LLMs, Astro, Dédale, XR, tldraw, RN + Amazon, RNGH, Reanimated, TC39, Node, TypeScript... "
+title: "This Week In React #195: Compiler, Refactoring components, XState Store, Next.js, Redwood, Vitale, Astro, LLMs, Astro, Dédale, XR, tldraw, RN + Amazon, RN new styles, Gesture Handler, Reanimated, TC39, Node, TypeScript... "
 authors: [slorber]
 date: 08-07-2024
 ---
